Let SelectionPaintRange iterator iterate on a flat tree.

SelectionPaintRange::Iterator iterated LayoutObjects using layout order
but we marks SelectionStatus on flat tree order.
This causes invalidation leak if they are not same order.
Ruby element is a reported example for that.

This patch changes SelectionPaintRange::Iterator iterate on a flat tree
considering first-letter.

Bug: 843144
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I02cbad86e64d0a7781f8fb37e2d13c7aa00228fb
Reviewed-on: https://chromium-review.googlesource.com/1063521
Commit-Queue: Yoichi Osato <yoichio@chromium.org>
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569168}
Former-commit-id: deb6bb60b6d562719d04c6a564717b332d9c55bd